# pydantic-numpy

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
pydantic_numpy/: __init__.py  __main__.py  dtype.py  ndarray.py
pydantic_numpy/tests/: test_array.py
tests/: test_array.py  test_dtype.py  test_ndarray.py
